# zen

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  readme.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc  nix-profile-pre324423.34ad3ffe08a
.direnv/flake-inputs/: 0swy6gxm4pczaw77pclrmxr4c5qv5s7d-source  1kyfzdv09plmmdc5gscfxih5z063y5xh-source  27vqdc1ajasqri3i5c9s1rnklz62mp2b-source  svl7gxaw099cnzxmpxmg14clcixhmam8-source  vsqkjxq5wp19mf2msacwa1mnpjcnpcbx-source
assets/: zen_material.wgsl
crates/zen-app/: Cargo.toml
crates/zen-app/src/: app.rs  asset.rs  lib.rs
crates/zen-archive/: Cargo.toml
crates/zen-archive/examples/: anim.rs  audio.rs  vdfs.rs
crates/zen-archive/src/: error.rs  lib.rs
crates/zen-camera/: Cargo.toml
crates/zen-camera/src/: first_person.rs  lib.rs
crates/zen-core/: Cargo.toml
crates/zen-core/examples/: anim.rs  audio.rs  gltf.rs  mrm.rs  msh.rs  vdfs.rs
crates/zen-core/src/: assets.rs  error.rs  lib.rs  material.rs  math.rs  transform.rs
crates/zen-core/src/archive/: bevy.rs  entry.rs  error.rs  mod.rs
crates/zen-core/src/material/: error.rs  mod.rs
crates/zen-core/src/model/: gltf.rs  mod.rs  zen.rs
crates/zen-core/src/mrm/: error.rs  mod.rs  sub_mesh.rs
crates/zen-core/src/msh/: error.rs  mod.rs
crates/zen-core/src/scene/: mod.rs  vob_tree.rs
crates/zen-core/src/texture/: error.rs  mod.rs  ztex.rs
crates/zen-daedalus/: Cargo.toml
crates/zen-daedalus/examples/: dat.rs
crates/zen-daedalus/src/: data.rs  lib.rs  machine.rs  stack.rs
crates/zen-daedalus/src/code/: error.rs  label.rs  memory.rs  mod.rs  symbol.rs
crates/zen-daedalus/src/machine/: mod.rs  operator.rs
crates/zen-ects/: Cargo.toml
crates/zen-first-person-camera/: Cargo.toml
crates/zen-first-person-camera/src/: lib.rs
crates/zen-input/: Cargo.toml
crates/zen-inventory/: Cargo.toml
crates/zen-material/: Cargo.toml
crates/zen-material/src/: error.rs  lib.rs
crates/zen-math/: Cargo.toml
crates/zen-math/src/: lib.rs
crates/zen-mesh/: Cargo.toml
crates/zen-mesh/examples/: gltf.rs  mrm.rs  msh.rs  scene.rs  zen.rs
crates/zen-mesh/src/: error.rs  gltf.rs  lib.rs  mrm.rs  msh.rs  object.rs  scene.rs  structs.rs  structures.rs  world.rs  zen.rs
crates/zen-mesh/src/mrm/: mod.rs  structures.rs
crates/zen-mesh/src/msh/: mod.rs  structures.rs
crates/zen-model/: Cargo.toml
crates/zen-mrm/: Cargo.toml
crates/zen-mrm/examples/: mrm.rs
crates/zen-mrm/src/: error.rs  lib.rs  sub_mesh.rs
crates/zen-msh/: Cargo.toml
crates/zen-msh/src/: error.rs  lib.rs  structures.rs
crates/zen-obj/: Cargo.toml
crates/zen-obj/src/: error.rs  lib.rs
crates/zen-parser/: Cargo.toml
crates/zen-parser/examples/: ascii.rs  example.zen
crates/zen-parser/src/: error.rs  header.rs  lib.rs  prelude.rs
crates/zen-parser/src/ascii/: de.rs  error.rs  mod.rs  read.rs
crates/zen-parser/src/ascii/parse/: mod.rs  read.rs
crates/zen-parser/src/binary/: de.rs  error.rs  mod.rs  read.rs
crates/zen-parser/src/binsafe/: de.rs  mod.rs
crates/zen-render/: Cargo.toml
crates/zen-render/bak/: lib.rs  material.rs
crates/zen-render/bak/model/: gltf.rs  mod.rs
crates/zen-render/bak/mrm/: error.rs
crates/zen-render/bak/msh/: structures.rs
crates/zen-render/bak/scene/: vob.rs  vob_tree.rs
crates/zen-render/examples/: mesh.rs  texture.rs
crates/zen-render/src/: bundles.rs  camera.rs  draw.rs  lib.rs  light.rs  material.rs  math.rs  mesh.rs  model.rs  shader.wgsl  texture.rs  uniforms.rs
crates/zen-render/src/gltf/: error.rs  material.rs  mesh.rs  mod.rs  primitive.rs  texture.rs
crates/zen-render/src/material/: error.rs  header.rs  kind.rs  material.rs  mod.rs
crates/zen-render/src/mrm/: asset.rs  error.rs  header.rs  mesh.rs  mod.rs  mrm.rs  sub_mesh.rs
crates/zen-render/src/texture/: asset_loader.rs  error.rs  header.rs  mod.rs  plugin.rs  texture.rs
crates/zen-texture/: Cargo.toml
crates/zen-texture/examples/: texture.rs  texture.rs.bak
crates/zen-texture/src/: error.rs  lib.rs  ztex.rs
crates/zen-types/: Cargo.toml
crates/zen-types/src/: lib.rs  material.rs  mesh.rs  path.rs
crates/zen-types/src/mesh/: mod.rs  msh.rs  object.rs  scene.rs
crates/zen-vdfs/: Cargo.toml
crates/zen-vdfs/examples/: anim.rs  audio.rs  vdfs.rs
crates/zen-vdfs/src/: archive.rs  asset_reader.rs  entry.rs  error.rs  header.rs  lib.rs  plugin.rs
crates/zen-window/: Cargo.toml  build.rs
crates/zen-window/examples/: hecs.rs
crates/zen-window/src/: error.rs  lib.rs
crates/zen-ztex/: Cargo.toml
crates/zen-ztex/examples/: texture.rs
crates/zen-ztex/src/: error.rs  format.rs  header.rs  lib.rs  texture.rs
doc/: settings.html  source-files.js
doc/adler/: struct.Adler32.html
doc/adler32/: struct.RollingAdler32.html
doc/approx/: struct.AbsDiff.html  struct.Ulps.html  trait.RelativeEq.html  trait.UlpsEq.html
doc/base64/: all.html  constant.CRYPT.html  constant.STANDARD.html  constant.STANDARD_NO_PAD.html  constant.URL_SAFE.html  enum.CharacterSet.html  enum.DecodeError.html  fn.decode_config.html  fn.decode_config_buf.html  fn.encode_config.html  fn.encode_config_buf.html  struct.Config.html
doc/bytemuck/: enum.PodCastError.html  trait.Contiguous.html
doc/color_quant/: all.html  index.html  struct.NeuQuant.html
doc/crc32fast/: struct.Hasher.html
doc/crossbeam_channel/: enum.SendTimeoutError.html  struct.IntoIter.html  struct.ReadyTimeoutError.html  struct.Receiver.html  struct.SelectedOperation.html  struct.Sender.html  struct.TrySelectError.html
doc/crossbeam_deque/: enum.Steal.html  struct.Injector.html  struct.Stealer.html  struct.Worker.html
doc/crossbeam_epoch/: struct.LocalHandle.html  struct.Owned.html  struct.Shared.html  trait.CompareAndSetOrdering.html  trait.Pointable.html  (+1 more)
docs/: crates.js  search-index.js
examples/: ascii.rs  hecs.rs  texture.rs  vdfs.rs
src/: lib.rs  main.rs  material.rs  math.rs  mesh.rs  vdfs.rs  zen_file.rs
zen-loader_from_reader/: Cargo.toml
zen-loader_from_reader/src/: lib.rs
(+2276 files in other folders)
