[package]
name = "zen-loader"
version = "0.0.1"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mordragt/zen-loader.git"
description = "Open zengine formats and export the data to modern formats"
readme = "README.md"
keywords = ["gothic", "zen", "game-engine", "data-formats", "loader"]
resolver = "2"

[workspace]
members = ["crates/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zen-app = { path = "crates/zen-app" }
zen-core = { path = "crates/zen-core" }
zen-archive = { path = "crates/zen-archive" }
zen-first-person-camera = { path = "crates/zen-first-person-camera", optional = true }
zen-mrm = { path = "crates/zen-mrm", optional = true }
zen-msh = { path = "crates/zen-msh", optional = true }
zen-model = {  path = "crates/zen-model" }
zen-parser = {  path = "crates/zen-parser" }
zen-texture = {  path = "crates/zen-texture" }
zen-material = {  path = "crates/zen-material" }
zen-types = {  path = "crates/zen-types" }
zen-daedalus = {  path = "crates/zen-daedalus" }
zen-math = { path = "crates/zen-math" }
zen-render = { path = "crates/zen-render" }
zen-input = { path = "crates/zen-input" }
hecs = "0.7"
winit = "0.26"

[features]
default = ["zen-mrm", "zen-first-person-camera"]