[package]
name = "zen"
version = "0.0.1"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mordragt/zen-loader.git"
description = "Open zengine formats and export the data to modern formats"
readme = "README.md"
keywords = ["gothic", "zen", "game-engine", "data-formats", "loader"]

[workspace]
members = ["crates/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zen-core = { path = "crates/zen-core" }
zen-parser = {  path = "crates/zen-parser" }
zen-types = {  path = "crates/zen-types" }
zen-daedalus = {  path = "crates/zen-daedalus" }
bevy = "0.8"
miette = "5.3"


