[package]
name = "zen"
version = "0.0.1"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mordragt/zen-loader.git"
description = "Open zengine formats and export the data to modern formats"
readme = "README.md"
keywords = ["gothic", "zen", "game-engine", "data-formats", "loader"]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
thiserror = "1.0"
bevy = "0.14.1"
image = "0.25"
gltf-json = "1.4"
gltf = "1.4"


[dependencies]
zen-core = { path = "crates/zen-core" }
zen-parser = { path = "crates/zen-parser" }
zen-daedalus = { path = "crates/zen-daedalus" }
bevy = "0.14.1"
bevy_panorbit_camera = "0.19.1"
miette = "7.2"
log = "0.4"
