[package]
name = "zen-camera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultraviolet = "0.8"
zen-input = { path = "../zen-input" }
zen-core = { path = "../zen-core" }
hecs = "0.7"
winit = "0.26"