[package]
name = "zen-core"
version = "0.0.1"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zen-parser = { path = "../zen-parser" }
zen-types = { path = "../zen-types" }
bytemuck = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
thiserror = "1.0"
miette = "5.3"
bevy = "0.8"
image = "0.24"
gltf = { version = "1.0", optional = true }
gltf-json = { version = "1.0", optional = true }
walkdir = "2"

[dev-dependencies]
gltf = "1.0"

[features]
#default = ["gltf", "gltf-json"]
