[package]
name = "zen-daedalus"
version = "0.0.1"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zen-parser = { path = "../zen-parser" }
serde = { version = "1.0", features = ["derive"] }
