[package]
name = "zen-material"
version = "0.0.1"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zen-types = {  path = "../zen-types" }
zen-archive = {  path = "../zen-archive" }
zen-texture = {  path = "../zen-texture" }
zen-math = { path = "../zen-math" }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"