[package]
name = "zen-mesh"
version = "0.0.1"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
gltf-json = "0.15"
gltf = "0.15"
zen-parser = {  path = "../zen-parser" }
zen-types = {  path = "../zen-types" }
zen-material = {  path = "../zen-material" }
zen-math = { path = "../zen-math" }

[dev-dependencies]
zen-archive = {  path = "../zen-archive" }