[package]
name = "zen-mesh"
version = "0.0.1"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
gltf-json = { version = "0.16", optional = true }
gltf = { version = "0.16", optional = true }
zen-parser = {  path = "../zen-parser" }
zen-types = {  path = "../zen-types" }
zen-material = {  path = "../zen-material" }
zen-math = { path = "../zen-math" }
zen-texture = { path = "../zen-texture", optional = true, features = ["image"] }
bytemuck = { version = "1.7.0", features = ["derive"] }


[dev-dependencies]
zen-archive = {  path = "../zen-archive" }

[features]
default = ["to-gltf"]
to-gltf = ["gltf", "gltf-json", "zen-texture"]