[package]
name = "zen-msh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zen-math = { path = "../zen-math" }
zen-parser = { path = "../zen-parser" }
zen-material = { path = "../zen-material" }
zen-model = { path = "../zen-model" }
zen-core = { path = "../zen-core" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
zen-archive = { path = "../zen-archive" }
zen-types = { path = "../zen-types" }
