[package]
name = "zen-obj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = "3.2"
zen-core = { path = "../zen-core" }
zen-model = { path = "../zen-model" }
zen-material = { path = "../zen-material" }
