[package]
name = "zen-parser"
version = "0.1.0"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
bincode = "1.3.1"
zen-types = { path = "../zen-types" }
