[package]
name = "zen-render"
version = "0.0.1"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zen-parser = { path = "../zen-parser" }
bytemuck = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
miette = "7.2"
image = "0.25"
texpresso = "2.0"
walkdir = "2"
bevy = { version = "0.14.1", optional = true }
gltf = { version = "1.4", optional = true }
gltf-json = { version = "1.4", optional = true }

[dev-dependencies]
gltf = "1.4"

[features]
default = ["gltf", "gltf-json", "bevy"]
