[package]
name = "zen-render"
version = "0.0.1"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zen-parser = { path = "../zen-parser" }
zen-core = { path = "../zen-core" }
serde.workspace = true
serde_repr.workspace = true
thiserror.workspace = true
gltf.workspace = true
gltf-json.workspace = true
bevy.workspace = true
image.workspace = true
texpresso = "2.0"
bytemuck = "1.16"
# serde_json = "1.0"
# miette = "7.2"
# walkdir = "2"

[dev-dependencies]
zen-vdfs = { path = "../zen-vdfs" }
