[package]
name = "zen-texture"
version = "0.0.1"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
zen-parser = {  path = "../zen-parser" }
serde_repr = "0.1"
image = { version = "0.23", optional = true }
wgpu = { version = "0.10", optional = true }


[dev-dependencies]
zen-archive = {  path = "../zen-archive" }
image = "0.23"

[features]
default = ["wgpu"]