[package]
name = "zen-types"
version = "0.1.0"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0.115", features = ["derive"] }
serde_repr = "0.1"
