[package]
name = "zen-types"
version = "0.0.1"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
vek = { version = "0.15", features = ["serde"] }
lazy_static = "1.4"