[package]
name = "zen-window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
env_logger = "0.8.4"
hecs = "0.6.5"
zen-app = { path = "../zen-app" }
zen-core = { path = "../zen-core" }
zen-input = { path = "../zen-input" }
zen-render = { path = "../zen-render" }
pollster = "0.2"

[dev-dependencies]
zen-input = { path = "../zen-input" }
zen-camera = { path = "../zen-camera" }