[package]
name = "zen-ztex"
version = "0.1.0"
edition = "2021"

[dependencies]
zen-parser = { path = "../zen-parser" }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
thiserror = "1.0"
image = { version = "0.25", optional = true }
texpresso = { version = "2.0", optional = true }
bevy = { version = "0.14.1", optional = true }

[dev-dependencies]
zen-core = { path = "../zen-core" }
zen-vdfs = { path = "../zen-vdfs" }

[features]
default = ["bevy", "encode"]
encode = ["image", "texpresso"]
